# ChangeLog for sci-biology/embassy-memenew
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/embassy-memenew/ChangeLog,v 1.11 2010/01/01 22:03:00 fauli Exp $

  14 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -embassy-memenew-4.0.0-r1.ebuild:
  Removed because the file is non-fetchable

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> embassy-memenew-4.0.0-r1.ebuild:
  Dropped ~ppc due to missing keywording of sci-libs/plplot, #358035

  20 Mar 2011; Justin Lecher <jlec@gentoo.org> embassy-memenew-4.0.0-r1.ebuild,
  files/embassy-memenew-4.0.0-r1.patch:
  Fixed for reviewed eclass

  15 Mar 2011; Justin Lecher <jlec@gentoo.org> embassy-memenew-4.0.0-r1.ebuild:
  Naming of eclass changed

  14 Mar 2011; Justin Lecher <jlec@gentoo.org> embassy-memenew-4.0.0-r1.ebuild:
  EOV not needed to be set anymore

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  embassy-memenew-4.0.0.ebuild:
  Transfer Prefix keywords

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

*embassy-memenew-4.0.0 (01 Sep 2009)

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org>
  +embassy-memenew-4.0.0.ebuild:
  Updated version for EMBASSY 6.1.0.

  01 Sep 2009; Olivier Fisette <ribosome@gentoo.org>
  embassy-memenew-0.1.0-r1.ebuild:
  Stabilised on amd64 and x86.

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  embassy-memenew-0.1.0.ebuild, embassy-memenew-0.1.0-r1.ebuild:
  Fixed description.

*embassy-memenew-0.1.0-r1 (27 Aug 2008)

  27 Aug 2008; Olivier Fisette <ribosome@gentoo.org>
  +embassy-memenew-0.1.0-r1.ebuild:
  New upstream version/package for EMBASSY 6.0.1.

  15 Feb 2007; Jeff Gardner <je_fro@gentoo.org>
  embassy-memenew-0.1.0.ebuild:
  Added ~amd64.

  03 Nov 2006; Jeff Gardner <je_fro@gentoo.org>
  embassy-memenew-0.1.0.ebuild:
  Added ~sparc

  02 Nov 2006; Fabian Groffen <grobian@gentoo.org>
  embassy-memenew-0.1.0.ebuild: