@@ -6,8 +6,8 @@ EAPI=5
 
 EBO_DESCRIPTION="wrappers for MEME - Multiple Em for Motif Elicitation"
 
-inherit emboss
+inherit emboss-r1
 
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos"
 
-RDEPEND+="sci-biology/meme"
+RDEPEND+=" sci-biology/meme"
